# Broken_Line_SDL2

./: .gitignore  CMakeLists.txt  README.md  data_for_BL.txt
console/: main.cc
functions/: broken_line.cc
functions/include/: broken_line.h
tests/: tests.cc
